<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".PlotActivity">

	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="100dp"
		app:layout_constraintTop_toTopOf="parent">

		<TableLayout
			android:id="@+id/table"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="1">

			<TableRow>

				<TextView
					android:padding="3dp"
					android:text="Месяц" />

				<TextView
					android:padding="3dp"
					android:text="@string/trust" />

				<TextView
					android:padding="3dp"
					android:text="@string/efficiency" />

				<TextView
					android:padding="3dp"
					android:text="@string/lifeLevel" />

			</TableRow>
		</TableLayout>

	</ScrollView>

	<com.github.mikephil.charting.charts.LineChart
		android:id="@+id/chart"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@id/start"
		android:layout_marginBottom="100dp"
		app:layout_constraintTop_toBottomOf="@id/scrollView" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/lDelay"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:background="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/chart">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edDelay"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/delayms"
			android:inputType="number"
			android:textSize="12sp" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/LMonth"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:background="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/chart">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edMonth"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/month"
			android:inputType="number"
			android:textSize="12sp" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/start"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/start"
		app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>